Added a Sinatra Grid Rest API   - added an _entry endpoint which can return a document from mongo     for a schema/grid using an _id or query   - added some helpers   - requires json content_type, responds with json content_type Added a test:rest RakeTask, and included it into :all, which tests   all of the tests in test/rest Added JsonHelpers to test/helpers, with a method to make posting objects   to the REST api and converting JSON response to objects easier Added rest test for the Grid Rest API Removed unnecessary mongo and bson installation from Gemfile Added moped to Gemfile, as it is a better mongo driver than the older mongo gem ALL TESTS PASS
added git to modules installed in base

--- a/apps/rgrids/Gemfile
+++ b/apps/rgrids/Gemfile
@@ -26,10 +26,8 @@ gem 'turbolinks'
 # Build JSON APIs with ease. Read more: https://github.com/rails/jbuilder
 gem 'jbuilder', '~> 1.2'
 
-gem 'bson'
 gem "mongoid", "~> 4.0.0.beta1"
-gem 'bson_ext'
-gem 'mongo'
+gem 'moped'
 
 group :doc do
   # bundle exec rake doc:rails generates the API under doc/api.
@@ -37,6 +35,7 @@ group :doc do
 end
 
 group :test do
+ gem 'rack-test'
  gem 'shoulda'
  gem "factory_girl_rails"
 end
