--- a/apps/rgrids/Rakefile
+++ b/apps/rgrids/Rakefile
@@ -4,3 +4,13 @@
 require File.expand_path('../config/application', __FILE__)
 
 Rgrids::Application.load_tasks
+namespace :test do
+   Rails::TestTask.new(rest: "test:prepare") do |t|
+     t.pattern = 'test/rest/**/*_test.rb'
+   end
+   Rake::Task['test:rest'].comment = "Run tests for Grid Rest Api"
+   task :run do
+     Rake::Task['test:rest'].invoke
+   end
+   Rake::Task['test'].comment = 'test:rest'
+end
