added and commented out section to print Rest Routes to Rakefile for rake routes   needs to be fixed so that it does not always run anytime rake is run added tests for all GridRestApi _entry routes GridRestApi passes its tests ALL TESTS PASS

--- a/apps/rgrids/Rakefile
+++ b/apps/rgrids/Rakefile
@@ -14,3 +14,13 @@ namespace :test do
    end
    Rake::Task['test'].comment = 'test:rest'
 end
+
+#namespace :routes do
+#  require File.expand_path('../lib/grid_rest_api', __FILE__)
+#  puts '-' * 80
+#  puts "REST Routes"
+#  GridRestApi.routes["POST"].each do |r|
+#    puts r[0].to_s.gsub(/\\A/,'').gsub(/\\z/, '').gsub(/\(\?\-mix\:/,'').sub(/\(\[\^\\\/\?\#\]\+\)/, ":#{r[1][0]}").sub(/\(\[\^\\\/\?\#\]\+\)/, ":#{r[1][1]}").gsub(/\\/,'').gs#ub(/\)/,'')
+#  end
+#  puts '-' * 80
+#end
